# covgate

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  README.md  covgate.toml  deny.toml  real-coverage.json  rust-toolchain.toml
.devcontainer/: devcontainer.json  flake.nix  post-create-command.sh
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md  release.yml
.github/workflows/: ci.yml  release.yml  reusable-ci.yml
docs/: PLANS.md  TESTING.md  TODO.md  TOOLS.md
docs/reference/: clarifying-record-base.md  coverage-parser-support-matrix.md  coverlet-method-summary-semantics.md  coverlet-method-to-function-normalization.md  coverlet-reportgenerator-method-semantics.md  environment-execution-contexts.md  function-coverage-debugging.md  llvm-export-semantics-investigation.md  release-binary-trust-and-ci.md
scripts/: agent-env-maintenance.sh  agent-env-setup.sh  package-release.sh  pre-commit  pre-push  setup-agent-env.sh  setup-agent-maintenance.sh  setup-codex-cloud-maintenance.sh  setup-codex-cloud.sh  setup-jules.sh
src/: cli.rs  config.rs  diff.rs  gate.rs  git.rs  lib.rs  main.rs  metrics.rs  model.rs
src/coverage/: coverlet_json.rs  istanbul_json.rs  llvm_json.rs  mod.rs  path.rs
src/render/: console.rs  markdown.rs  mod.rs
tests/: cli.rs  cli_interface.rs  cli_metrics.rs  config_auto_base.rs  config_discovery.rs  coverage_parse.rs  diff_module.rs  git_module.rs  lib_run.rs  llvm_diff_regression.rs  llvm_real_parity.rs  overall_summary.rs
tests/support/: mod.rs
xtask/: Cargo.toml
xtask/src/: main.rs
(+97 files in other folders)
