[package]
name = "covgate"
version = "0.1.3"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
description = "Diff-focused coverage gates for local CI, pull requests, and autonomous coding agents."
readme = "README.md"
repository = "https://github.com/jesse-black/covgate"
homepage = "https://github.com/jesse-black/covgate"
documentation = "https://docs.rs/covgate"
keywords = ["coverage", "diff", "ci", "git", "cli"]
categories = ["command-line-utilities", "development-tools::testing"]
include = [
  "src/**",
  ".cargo/config.toml",
  "Cargo.toml",
  "Cargo.lock",
  "README.md",
  "LICENSE*",
]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
rustc-demangle = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.1"

[dev-dependencies]
tempfile = "3.15"

[workspace]
members = [".", "xtask"]
